Update analyses for publication

--- a/SA.bib
+++ b/SA.bib
@@ -446,6 +446,16 @@ pages = {698},
 month = sep
 }
 
+@article{Juliano:2014gn,
+author = {Juliano, Celina E and Reich, Adrian and Liu, Na and G{\"o}tzfried, Jessica and Zhong, Mei and Uman, Selen and Reenan, Robert A and Wessel, Gary M and Steele, Robert E and Lin, Haifan},
+title = {{PIWI proteins and PIWI-interacting RNAs function in Hydra somatic stem cells.}},
+journal = {Proceedings of the National Academy of Sciences of the United States of America},
+year = {2014},
+volume = {111},
+number = {1},
+pages = {337--342},
+month = jan
+}
 
 
 
