--- a/SA01_ClustTranscriptomePermissive.Rmd
+++ b/SA01_ClustTranscriptomePermissive.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "SA01 - Initial clustering, gene/UMI cut-off decision"
 author: "Stefan Siebert"
-date: "October 25, 2018"
+date: "October 25, 2018, updated on May 25, 2019"
 bibliography: SA.bib
 csl: bib.csl
 site: "bookdown::bookdown_site"
@@ -11,6 +11,8 @@ output:
 linestretch: 0.5
 fontsize: 11 pt
 geometry: margin= 2.0 cm
+editor_options: 
+  chunk_output_type: inline
 ---
 
 \fontsize{10}{18}
@@ -24,7 +26,7 @@ opts_chunk$set(tidy.opts=list(width.cutoff=70),tidy=TRUE,dev="png",dpi=150)
 
 ## Summary {-}
 
-We set out to elucidate cell state specific gene and UMI metrics to make an informed decision on suitable gene and UMI cut-offs for the final data set. Drop-seq reads from 15 libaries were mapped to a de novo transcriptome reference for *Hydra vulgaris* AEP. After an initial permissive cell QC (genes per cell cut-offs of > 200 and < 8k and UMIs per cell cut-offs of > 400 < 70k) we perform graph-based clustering of the cells using Seurat [@Satija:2015iq]. Clusters are annotated using published gene expression patterns. Metrics for cell states are calculated and further explored.\  
+We set out to elucidate cell state specific gene and UMI metrics to make an informed decision on suitable gene and UMI cut-offs for the final data set. Drop-seq reads from 15 libraries were mapped to a de novo transcriptome reference for *Hydra vulgaris* AEP. After an initial permissive cell QC (genes per cell cut-offs of > 200 and < 8k and UMIs per cell cut-offs of > 400 < 70k) we perform graph-based clustering of the cells using Seurat [@Satija:2015iq]. Clusters are annotated using published gene expression patterns. Metrics for cell states are calculated and further explored.\  
 
 # Preliminaries {-}
 
@@ -38,8 +40,11 @@ library(grid)
 library(gridExtra)
 library(rlang)
 
-# Function to find the full ID for gene of interest
-# Gene ids have are of the format txxxaep|swiss_prot_id_best_hit
+# Function to find the full ID for a gene of interest.  
+
+# In the Hydra transcriptome that our RNAseq data is aligned against, each transcript has its own transcript identifier that begins “t#####aep”. Putative gene identities have been assigned by BLASTing transcript sequences against the Swiss-Prot database, and their most significant alignment (including organism) has been appended to the transcript ID, e.g."t18735aep|FOXA2_ORYLA".
+
+# Function to retrieve the full transcript name
 hFind <- function (x) {
   return (ds.ds@data@Dimnames[[1]][grep(x,ds.ds@data@Dimnames[[1]],ignore.case = T)])
 }
@@ -88,7 +93,7 @@ ds.ds <- AddMetaData(ds.ds, percent.mito, "percent.mito")
 
 ```
 
-We evaluate genes/cell, UMIs/cell and percentage of mitochondrial reads across treatments (Fig. \ref{fig:qcstats}). Two different types of beads were used in the experiments. Libraries 01-06 were generated using original Drop-seq beads (Barcoded Beads SeqB; ChemGenes Corp., Wilmington, MA, USA) [@Macosko:2015ht]). Libraries 11-12 were generated using R&D beads (LGC Biosearch Technologies,  Petaluma, CA, USA) that had a 12bp UMI as the only modification to the linker. A longer sequencing read 1 yielded improved sequence quality scores on the Illumina NextSeq. Biosearch beads however generated lower gene and UMI numbers per cell for comparable cell suspensions (Figs. \ref{fig:qcstats}, \ref{fig:mito}), e.g. libraries 06-KI and 11-PO were both created using suspensions from whole *Hydra*. The highest percentages of mitochondrial reads were observed in FACS sorted neuronal libraries 12-N1 and 12-N2  (Figs. \ref{fig:qcstats}, \ref{fig:mito}).\
+We evaluate genes/cell, UMIs/cell and percentage of mitochondrial reads across treatments (Fig. \ref{fig:qcstats}). Two different types of beads were used in the experiments. Libraries 01-06 were generated using original Drop-seq beads (Barcoded Beads SeqB; ChemGenes Corp., Wilmington, MA, USA) [@Macosko:2015ht]). Libraries 11-12 were generated using R&D beads (LGC Biosearch Technologies,  Petaluma, CA, USA) that had a 13bp UMI as the only modification to the linker. A longer sequencing read 1 yielded improved sequence quality scores on the Illumina NextSeq. Biosearch beads however generated lower gene and UMI numbers per cell for comparable cell suspensions (Figs. \ref{fig:qcstats}, \ref{fig:mito}), e.g. libraries 06-KI and 11-PO were both created using suspensions from whole *Hydra*. The highest percentages of mitochondrial reads were observed in libraries 12-N1 and 12-N2 that were generated using sorted cells (FACS) (Figs. \ref{fig:qcstats}, \ref{fig:mito}).\
 
 ```{r qcstats, fig.height = 8, fig.width = 12, fig.align='center', out.height="40%", fig.cap= "Number of genes, UMIs and percentage of mitochondrial reads per cell across libraries."}
 
@@ -99,7 +104,7 @@ VlnPlot(object = ds.ds, c("nGene", "nUMI","percent.mito"), group.by = "orig.iden
 
 High levels of mitochondrial reads may indicate that a cell was stressed or dying. We exclude cells that have > 5% of mitochondrial reads and calculate post filtering stats for cells from individual libraries (Fig. \ref{fig:mito}).\
 
-```{r mito, fig.height = 20, fig.width = 20, out.height="30%", fig.align='center', fig.cap= "Percentage of cells with high mitochondrial read ratios across libraries. Cell numbers pre and post filtering. Fraction of mitochondrial reads. Median genes and UMIs per cell post filtering using permissive gene and UMI cut-offs."}
+```{r mito, fig.height = 20, fig.width = 20, out.height="30%", fig.align='center', fig.cap= "Percentage of cells with high mitochondrial read ratios across libraries. Cell numbers pre and post filtering. Fraction of cells with a high mitochondrial read count. Median genes and UMIs per cell post filtering using permissive gene and UMI cut-offs."}
 
 # Calculate library stats
 
@@ -168,7 +173,7 @@ ds.ds <- FindVariableGenes(object = ds.ds,
 
 ```
 
-```{r scale, cache.lazy = FALSE, cache=TRUE, results='hide'}
+```{r scale, cache.lazy = FALSE, message=F, cache=TRUE, results='hide'}
 
 # Scale
 ds.ds <- ScaleData(object = ds.ds)
@@ -199,7 +204,7 @@ ds.ds <- ProjectPCA(object = ds.ds)
 
 We perform the Jackstraw test as implemented in Seurat to identify "significant" principal components to be used in the cell clustering. In addition, we approximate the amount of variance encoded by each PC using the the function PCELbowPlot() (Fig. \ref{fig:pcelbow}).\  
 
-```{r jack straw, eval = FALSE}
+```{r jackstraw, eval = FALSE}
 
 # Determine statistically significant PCs
 ds.ds <- JackStraw(object = ds.ds, num.pc = 40, num.replicate = 100, do.print = FALSE)
@@ -236,14 +241,14 @@ We apply t-SNE dimensionality reduction for visualization purposes. `r length(un
 ds.ds <- RunTSNE(object = ds.ds, dims.use = c(1:19), do.fast = T)
 
 # Save object
- saveRDS("objects/ds.ds.g200_8k_U400_70k_PC1_19.rds")
+# saveRDS("objects/ds.ds.g200_8k_U400_70k_PC1_19.rds")
 
 ```
 
 ```{r tsne, message=F, warning=F, fig.height = 9, fig.width = 9, out.height="50%", fig.align='center', fig.cap= "t-SNE plot for all cells after applying permissive gene and UMI cut-offs."}
 
 # Since t-SNE is not deterministic we here load the object of our original analysis
-#ds.ds <- readRDS("objects/ds.ds.g200_8k_U400_70k_PC1_19.rds")
+ds.ds <- readRDS("objects/ds.ds.g200_8k_U400_70k_PC1_19.rds")
 
 # Fig. tsne
 TSNEPlot(object = ds.ds, group.by="res.1.5", do.return=T, do.label = T, no.legend = TRUE, pt.size = 0.5) + ggtitle("Resolution 1.5")
@@ -302,14 +307,14 @@ current.cluster.ids <- as.character(0:43)
 ds.ds <- SetAllIdent(object = ds.ds, id = "cluster_numbering")
 
 # Cluster identities
-cluster.names <- c("enEp_SC1","i_SC","enEp_SC2","ecEp_SC1","i_gc_nc_prog","ecEp_SC2","i_nb1","i_smgc","ecEp_nem1(pg)","enEp_foot","ecEp_head","i_gmgc","i_nb2","ecEp_bat(mp)","ecEp_bd","i_nc1","i_nem","i_zmg1","i_nc2","i_fmgl1","ecEp_nem2(id)","i_mgl","i_fmgl2","i_nc3","enEp_head","enEp_SC3","i_nb3","i_nb5","enEp_tent","i_nc4","i_nc5","i_nc6","i_nb4","db3","enEp_nem1(pd)","i_nc7","enEp_nem2(pd)","i_zmg2","i_nc8","enEp_tent(pd)","db1","i_gc_prog","ecEp_nem3(pg)","db2")
+cluster.names <- c("enEp_SC1","i_SC","enEp_SC2","ecEp_SC1","i_gc_nc_prog","ecEp_SC2","i_nb1","i_smgc","ecEp-nb(pg)","enEp_foot","ecEp_head","i_gmgc","i_nb2","ecEp_bat(mp)","ecEp_bd","i_nc1","i_nem","i_zmg1","i_nc2","i_fmgl1","ecEp-nem1(id)","i_mgl","i_fmgl2","i_nc3","enEp_head","enEp_SC3","i_nb3","i_nb5","enEp_tent","i_nc4","i_nc5","i_nc6","i_nb4","db3","enEp-nem(pd)","i_nc7","enEp-nb(pd)","i_zmg2","i_nc8","enEp_tent-nem(pd)","db1","i_gc_prog","ecEp-nem2(id)","db2")
 
 # Update names in Seurat object
 ds.ds@ident <- plyr::mapvalues(x = ds.ds@ident, from = current.cluster.ids, to = cluster.names)
 
 ```
 
-```{r annotatedtsne, fig.height = 9, fig.width = 9, out.height="70%", fig.align='center', fig.cap= "Annotated t-SNE plot for the permissive dataset. bat: battery cell, db: doublet, ecEP: ectodermal epithelial cell, enEP: endodermal epithelial cell, fmgl: female germ-line, gc: gland cell, gmgc: granular mucous gland cell, i: cell of the interstitial lineage, id: integration doublet, mgl: male germline, mp: multiplet, nb: nematoblast, nc: neuronal cell, nem: nematocyte, pd: suspected phagocytosis doublet, prog: progenitor, SC: stem cell, smgc: spumous mucous gland cell, tent: tentacle, zmg: zymogen gland cell."}
+```{r annotatedtsne, fig.height = 9, fig.width = 9, out.height="70%", fig.align='center', fig.cap= "Annotated t-SNE plot for the permissive dataset. bat: battery cell, db: doublet, ecEP: ectodermal epithelial cell, enEP: endodermal epithelial cell, fmgl: female germline, gc: gland cell, gmgc: granular mucous gland cell, i: cell of the interstitial lineage, id: integration doublet, mgl: male germline, mp: multiplet, nb: nematoblast, nc: neuronal cell, nem: differentiated nematocyte, pd: suspected phagocytosis doublet, prog: progenitor, SC: stem cell, smgc: spumous mucous gland cell, tent: tentacle, zmg: zymogen gland cell."}
 
 # Fig. annotated tsne
 TSNEPlot(object = ds.ds, do.return=T, do.label = T, no.legend=TRUE, pt.size = 0.5) + ggtitle("g>200<8k genes, UMI>400<70k,  27,911 cells")
@@ -320,22 +325,22 @@ TSNEPlot(object = ds.ds, do.return=T, do.label = T, no.legend=TRUE, pt.size = 0.
 
 ## Cluster annotation identifies biological multiplets {-}
 
-*Hydra* has a specialized cell that is localized in the ectoderm of the tentacles - the battery cell [@Campbell:1987en; @Hobmayer:1990wc] (Fig. \@ref(doublets)). This epithelial cell houses multiple nematocytes and a neuron [@Campbell:1987en; @Hobmayer:1990wc] (Fig. \@ref(doublets) D,G). Our dissociation strategy does not allow for separation of the host cell and the mounted cells and this type of association shows as a hybrid transcriptome in the data. Cells in clusters composed of battery cell multiplets are positive for epithelial, nematocyte and neuronal markers, and are labeled (mp) in the annotated t-SNE plot. In addition, mature nematocytes can be found mounted or integrated in ectodermal epithelial cells along the body column and neurons have also been found integrated within ectodermal cells outside the tentacles [@Bode:1976wx; @Dubel:1989ii]. We refer to a physical association of a neuron/nematocyte and an epithelial cell outside the tentacles that naturally occurs in homeostatic *Hydra* as integration doublet (id).
+*Hydra* has a specialized cell that is localized in the ectoderm of the tentacles - the battery cell [@Campbell:1987en; @Hobmayer:1990wc] (Fig. \@ref(doublets)). This epithelial cell houses multiple nematocytes and a neuron [@Campbell:1987en; @Hobmayer:1990wc] (Fig. \@ref(doublets) D,G). Our dissociation strategy does not allow for separation of the host cell and the mounted cells and this type of association shows as a hybrid transcriptome in the data. Cells in clusters composed of battery cell multiplets are positive for epithelial, nematocyte and neuronal markers, and are labeled (mp) in the annotated t-SNE plot. In addition, mature nematocytes can be found mounted or integrated in ectodermal epithelial cells along the body column and neurons have also been found integrated within ectodermal cells outside the tentacles [@Bode:1976wx; @Dubel:1989ii]. We refer to a physical association of a differentiated neuron/nematocyte and an epithelial cell outside the tentacles that naturally occurs in homeostatic *Hydra* as integration doublet (id).
 
-We find unexpected colocalization of nematocyte gene expression with endodermal epithelial gene expression, e.g. cells of cluster 36 (enEP_nem2(pd)) show expression for both endodermal markers and the nematoblast marker *nematogalectin B* (Fig. \ref{fig:annotate} M). Except for a single publication [@Lyon:1982fa], endodermal localization of nematocytes has not been established in *Hydra*. We attribute these doublet transcriptional signatures, in part, to phagocytotic activity of epithelial cells. Phagocytotic activity of epithelial cells has been reported on multiple occasions [@Campbell:1976vx; @Lyon:1982fa]. Phagocytosis may occur across the mesoglea via phagocytotic processes even in homeostatic *Hydra* and evidence is observable as cellular remains inside unbroken epithelial cells separated by maceration in wild type *Hydra* [@Campbell:1976vx]. Using transgenic lines expressing GFP in specific interstitial cell populations we are able to find evidence in support for the hypothesis that neighbouring cells get taken up during the dissociation procedure (Fig. \@ref(doublets) A). Phagocytotic uptake occurs within 5 to 30min post challenge and thus likely occurs before the animals are fully dissociated [@McNeil:1981tz]. The uptake is not restricted to entire cells but also includes blebs that pinch off from epithelial cells during dissociation; we demonstrated this by using using cells that express cytosolic fluorescent proteins (not shown). This could potentially lead to spurious expression of marker genes from different lineages in epithelial cells of the ectoderm or endoderm. Phagocytotic uptake of cells or blebs has also been demonstrated in reaggregation experiments [@Seybold:2016fs]. We interpret co-expression of nematoblast/nematocyte markers and endodermal markers in part as a result of these processes. This doublet type is labeled as suspected phagocytosis doublet (pd) in the annotated t-SNE plot. Phagocytotic uptake of nematoblasts by epithelial cells is obvious in the t-SNE representation (Fig. \ref{fig:tsne}). Cluster i_nb5 are late stage nematoblasts. The terminus of this trajectory is formed by cells positive for *PPOD1* expression, an epithelial marker (compare to Fig. \ref{fig:annotate} E), suggesting that the terminal group of cells in this trajectory represent doublets composed of nematoblasts and ectodermal epithelial cells. A clear distinction between the mp, id and pd categories is in many cases not possible. 
+We find unexpected colocalization of nematocyte gene expression with endodermal epithelial gene expression, e.g. cells of cluster 36 (enEP-nb(pd)) show expression for both endodermal markers and the nematoblast marker *nematogalectin B* (Fig. \ref{fig:annotate} M). Except for a single publication [@Lyon:1982fa], endodermal localization of nematocytes has not been established in *Hydra*. We attribute these doublet transcriptional signatures, in part, to phagocytic activity of epithelial cells. Phagocytic activity of epithelial cells has been reported on multiple occasions [@Campbell:1976vx; @Lyon:1982fa]. Phagocytosis may occur across the mesoglea via phagocytic processes even in homeostatic *Hydra* and evidence is observable as cellular remains inside unbroken epithelial cells separated by maceration in wild type *Hydra* [@Campbell:1976vx]. Using transgenic lines expressing GFP in specific interstitial cell populations we are able to find evidence in support for the hypothesis that neighbouring cells get taken up during the dissociation procedure (Fig. \@ref(doublets) A). Phagocytic uptake occurs within 5 to 30min post challenge and thus likely occurs before the animals are fully dissociated [@McNeil:1981tz]. The uptake is not restricted to entire cells but also includes blebs that pinch off from epithelial cells during dissociation; we demonstrated this by using using cells that express cytosolic fluorescent proteins (not shown). This could potentially lead to spurious expression of marker genes from different lineages in epithelial cells of the ectoderm or endoderm. Phagocytic uptake of cells or blebs has also been demonstrated in reaggregation experiments [@Seybold:2016fs]. We interpret co-expression of nematoblast/nematocyte markers and endodermal markers in part as a result of these processes. This doublet type is labeled as suspected phagocytosis doublet (pd) in the annotated t-SNE plot. Phagocytic uptake of nematoblasts by epithelial cells is obvious in the t-SNE representation (Fig. \ref{fig:tsne}). Cluster i_nb5 are late stage nematoblasts. The terminus of this trajectory is formed by cells positive for *PPOD1* expression, an epithelial marker (compare to Fig. \ref{fig:annotate} E), suggesting that the terminal group of cells in this trajectory represent doublets composed of nematoblasts and ectodermal epithelial cells. A clear distinction between the mp, id and pd categories is in many cases not possible. 
 
-![\label{doublets}Documentation of live cells after tissue dissociation reveals cell multiplets. Multiple transgenic strains expressing fluorescent proteins were used to demonstrate the existence of biological multiplets (e.g. battery cells), viability of cells within the host cells, and the occurrence of phagocytosis. For all panels: 1st image fluorescence, 2nd image bright field, 3rd image overlay. A-C,F) Line expressing GFP in ectodermal epithelial cells and RFP in endodermal epithelial cells. D,G) Line (eGreen) expressing GFP predominantly in the neuronal lineage and scattered in nematocytes. H,I) Cross of lines neuro::GFP and eGreen expressing GFP in ectodermal neurons and RFP in epithelial cells (Lines courtesy of Rob Steele, Toshitaka Fujisawa, Xiaoming Zhang and Yukihiko Noro). A-D) Ectodermal epithelial cells containing a single or multiple nematocytes of one or multiple kinds. A) Ectodermal epithelial cell containing multiple nematocytes with desmonemes. The nematocytes appear to be contained in a vacuole like compartment that may be indicative of phagocytotic uptake in the course of the dissociation procedure. B) Ectodermal epithelial cell containing two nematocytes with desmonemes. C) Ectodermal epithelial cell containing a single nematocyte with isorhiza nematocyst. D) Nematocyte with stenotele and GFP positive cytoplasm within an ectodermal epithelial battery cell. F) Endodermal epithelial cell containing a stenotele. G) Ectodermal epithelial battery cell containing a GFP positive neuron. H) Endodermal epithelial cell (as indicated by the presence of vacuoles) containing GFP, with transgenic neurons as the sole possible source for GFP. I) Ectodermal epithelial cell containing a nematocyte (stenotele) and GFP positive structures, with transgenic neurons as as the sole possible source for GFP. d: desmoneme, is: isorhiza, st: stenotele, nc: neuronal cell.](SA_figures/SA01_figures/multiplets_doublets.jpg)
+![\label{doublets}Documentation of live cells after tissue dissociation reveals cell multiplets. Multiple transgenic lines expressing fluorescent proteins were used to demonstrate the existence of biological multiplets (e.g. battery cells), viability of cells within the host cells, and the occurrence of phagocytosis. For all panels: 1st image fluorescence, 2nd image bright field, 3rd image overlay. A-C,F) Line expressing GFP in ectodermal epithelial cells and RFP in endodermal epithelial cells (Glauber et al., 2013). D,G) Line nGreen, expressing GFP predominantly in the neuronal lineage and scattered in nematocytes. H,I) Line PT1 (courtesy of Rob Steele), cross expressing GFP in ectodermal neurons and DsRed2 in all cells (based on line hym176B::GFP (Noro et al. 2019) and line all DsRed2 (Glauber et al., 2013)). A-D) Ectodermal epithelial cells containing a single or multiple nematocytes of one or multiple kinds. A) Ectodermal epithelial cell containing multiple nematocytes with desmonemes. The nematocytes appear to be contained in a vacuole like compartment that may be indicative of phagocytic uptake in the course of the dissociation procedure. B) Ectodermal epithelial cell containing two nematocytes with desmonemes. C) Ectodermal epithelial cell containing a single nematocyte with isorhiza nematocyst. D) Nematocyte with stenotele and GFP positive cytoplasm within an ectodermal epithelial battery cell. F) Endodermal epithelial cell containing a stenotele. G) Ectodermal epithelial battery cell containing a GFP positive neuron. H) Endodermal epithelial cell (as indicated by the presence of vacuoles) containing GFP, with transgenic neurons as the sole possible source for GFP. I) Ectodermal epithelial cell containing a nematocyte (stenotele) and GFP positive structures, with transgenic neurons as as the sole possible source for GFP. d: desmoneme, is: isorhiza, st: stenotele, nc: neuronal cell.](SA_figures/SA01_figures/multiplets_doublets.jpg)
 
-Neuronal multiplets and doublets resulting from integration or phagocytotic uptake could be demonstrated in fluorescence-activated sorted cell (FACS) populations (Fig. \@ref(neurodoublets)). The line (eGreen) used for this experiment expresses GFP (act::GFP) predominantly in the neuronal trajectory and mature neurons as a result of a random integration event after zygote microinjection. Using FACS, we were able to collect both single neuronal cells (Fig. \@ref(neurodoublets) B) and larger GFP-positive cells that we determined to be multiplets composed of GFP-positive cells residing within epithelial cells (Fig. \@ref(neurodoublets) C). Ectodermal cells of the body column or endodermal cells are suggested as host cells in cases were co-integrated nematocytes are absent (see also (Fig. \@ref(doublets) H, I).
-The presence of multiple biological doublet categories as well as technical doublets (e.g. dissociation doublets and expected drop-seq doublets) imposes analysis challenges. We therefore did not perform global doublet exclusion at an early stage but rather evaluated doublets at each stage of the downstream analyses and applied strategies to appropriately deal with these challenges.
+Neuronal multiplets and doublets resulting from integration or phagocytic uptake could be demonstrated in fluorescence-activated sorted cell (FACS) populations (Fig. \@ref(neurodoublets)). The line (nGreen) used for this experiment expresses GFP (act::GFP) predominantly in the neuronal trajectory and mature neurons as a result of a random integration event after zygote microinjection. Using FACS, we were able to collect both single neuronal cells (Fig. \@ref(neurodoublets) B) and larger GFP-positive cells that we determined to be multiplets composed of GFP-positive cells residing within epithelial cells (Fig. \@ref(neurodoublets) C). Ectodermal cells of the body column or endodermal cells are suggested as host cells in cases were co-integrated nematocytes are absent (see also (Fig. \@ref(doublets) H, I).
+The presence of multiple biological doublet categories as well as technical doublets (e.g. dissociation doublets and expected Drop-seq doublets) imposes analysis challenges. We therefore did not perform global doublet exclusion at an early stage but rather evaluated doublets at each stage of the downstream analyses and applied strategies to appropriately deal with these challenges.
 
-![\label{neurodoublets}Pilot fluorescence-activated cell sorting (FACS) of *Hydra* cell suspensions. A) Gates implemented to collected GFP-positive cells. Both populations, R1 and R2, are GFP-positive. Population R2 (B) contained undifferentiated cells, neurons (bottom, to be labeled), and scattered nematocytes. Cells of population R2 were collected in two independent sortings and used to generate two Drop-seq libraries. C) Population R1 was characterized by lower GFP intensities and larger cell sizes. Fluorescent microscopy combined with DIC (C) revealed GFP signal within larger epithelial cells demonstrating the existence of biological multiplets likely due to integrated neurons or phagocytosis. These cell multiplets are captured when performing whole animal cell suspensions.](SA_figures/SA01_figures/neurodoublets.jpg)
+![\label{neurodoublets}Pilot fluorescence-activated cell sorting (FACS) of *Hydra* cell suspensions from transgenic line nGreen. A) Gates implemented to collected GFP-positive cells. Both populations, R1 and R2, are GFP-positive. Population R2 (B) contained undifferentiated cells, neurons (bottom, to be labeled), and scattered nematocytes. Cells of population R2 were collected in two independent sortings and used to generate two Drop-seq libraries. C) Population R1 was characterized by lower GFP intensities and larger cell sizes. Fluorescent microscopy combined with DIC (C) revealed GFP signal within larger epithelial cells demonstrating the existence of biological multiplets likely due to integrated neurons or phagocytosis. These cell multiplets are captured when performing Drop-seq using whole animal cell suspensions.](SA_figures/SA01_figures/neurodoublets.jpg)
 
 ## Cells and UMIs across cell states, bead evaluation {-}
 
 We determine gene and UMI metrics for each annotated cell state in this initial clustering. The overall statistics are summarized in Fig. \ref{fig:tab1}. The lowest gene and UMI numbers are observed for differentiated neurons. Cells that were identified as female germline (nurse cells) have the highest gene and UMI numbers. Zymogen gland cells (i_zmg1, i_zmg2) stand out as cells with relatively high UMI to gene ratios (Fig. \ref{fig:tab1}).  
 
-Since choice of beads affected the cell metrics, we break down the metrics by beads (Fig. \ref{fig:tab2}). We compare metrics for cells generated with ChemGenes beads (CG, 11 libraries, whole animal dissociations) to all cells that were generated using Biosearch beads (BS, 4 libraries). We further break down Biosearch beads into cells that were generated from whole animal dissociations (wBS, 2 libraries, to be compared to ChemGenes bead metrics) and cells that were enriched for neuronal cells using FACS (nBS, 2 libraries). Both bead types generate similar distributions of gene and UMI numbers across cell states with fewer genes and UMIs detected in case of Biosearch beads.\ 
+Since choice of beads affected the cell metrics, we break down the metrics by beads (Fig. \ref{fig:tab2}). We compare metrics for cells generated with ChemGenes beads (CG, 11 libraries, whole animal dissociations) to all cells that were generated using Biosearch beads (BS, 4 libraries). We further break down Biosearch beads into cells that were generated from whole animal dissociations (wBS, 2 libraries, to be compared to ChemGenes bead stats) and cells that were enriched for neuronal cells using FACS (nBS, 2 libraries). Both bead types generate similar distributions of gene and UMI numbers across cell states with fewer genes and UMIs detected in case of Biosearch beads.\ 
 
 ```{r cluster_stats_all, message=F, warning=F}
 
@@ -360,7 +365,7 @@ df <- df[,c(3,1,2)]
 
 ```
 
-```{r tab1, fig.height = 20, fig.width = 4.5, out.height="80%", fig.align='center', fig.cap= "Median genes/UMIs per cell per state (all libraries)."}
+```{r tab1, fig.height = 20, fig.width = 4.5, out.height="80%", fig.align='center', fig.cap= "Median genes/UMIs per cell per state (all libraries). bat: battery cell, db: doublet, ecEP: ectodermal epithelial cell, enEP: endodermal epithelial cell, fmgl: female germline, gc: gland cell, gmgc: granular mucous gland cell, i: cell of the interstitial lineage, id: integration doublet, mgl: male germline, mp: multiplet, nb: nematoblast, nc: neuronal cell, nem: differentiated nematocyte, pd: suspected phagocytosis doublet, prog: progenitor, SC: stem cell, smgc: spumous mucous gland cell, tent: tentacle, zmg: zymogen gland cell."}
 
 # Table genes/UMIs, create table for median gene and UMI numbers for all states for cells from all libraries
 
@@ -535,7 +540,7 @@ wBSnBS$cellState <- NULL
 
 ```
 
-```{r tab2, echo = FALSE, fig.height = 20, fig.width = 18, out.height="50%", fig.align='center', fig.cap= "Median number of genes and UMIs obtained with different beads and cell suspensions. ChemGenes beads, cell suspensions from whole animal dissociation (CG). Biosearch beads (BS), cell suspensions from whole animal dissociation and FACS sorted cells. Biosearch beads (wBS), cell suspensions from whole animal dissociation. Biosearch beads (nBS), neuronal cells enriched using FACS."}
+```{r tab2, echo = FALSE, fig.height = 20, fig.width = 18, out.height="50%", fig.align='center', fig.cap= "Median number of genes and UMIs obtained with different beads and cell suspensions. ChemGenes beads, cell suspensions from whole animal dissociation (CG). Biosearch beads (BS), cell suspensions from whole animal dissociation and FACS sorted cells. Biosearch beads (wBS), cell suspensions from whole animal dissociation. Biosearch beads (nBS), neuronal cells enriched using FACS. bat: battery cell, db: doublet, ecEP: ectodermal epithelial cell, enEP: endodermal epithelial cell, fmgl: female germline, gc: gland cell, gmgc: granular mucous gland cell, i: cell of the interstitial lineage, id: integration doublet, mgl: male germline, mp: multiplet, nb: nematoblast, nc: neuronal cell, nem: differentiated nematocyte, pd: suspected phagocytosis doublet, prog: progenitor, SC: stem cell, smgc: spumous mucous gland cell, tent: tentacle, zmg: zymogen gland cell."}
 
 # Table, create table for median gene and UMI numbers for all states for 
 # ChemGenes libraries, Biosearch libraries, Biosearch whole animal (w), 
@@ -571,7 +576,7 @@ grid.draw(g)
 
 ## Cut-off exploration {-}
 
-We next evaluate the impact of cut-off selection for number of genes and UMIs per cell on cells retained in the analysis (Fig. \ref{fig:cutoffs}). No clear cut-offs are suggested in elbow plots (not shown). Increasing the lower gene cut-off to 400 cells would exclude 1,725 cells, a large fraction of which these are neurons (Fig. \ref{fig:cutoffs}). C). All identified cell states are present at a lower cut-off of 300 genes per cell. On the high end (> 7000 genes) we find that cells contribute to multiple clusters not suggesting that particular doublet categories can be excluded via cut-off selection. We also explore the cells that each library contributes to the data set (Fig. \ref{fig:cellplib}). We find a similar contribution from libraries that were generated using whole animals (Fig. \ref{fig:cellplib} B-G, M-N). In libraries that contained sexually reproducing animals (Fig. \ref{fig:cellplib}), H-K) the ratio of germline cells is increased. Neuronal libraries are predominantly composed of neuronal progenitors and differentiated neurons as well as, at lower numbers, of other interstitial somatic cells such as gland cells and nematocytes. For the down-stream analyses we settled on >300 < 7k genes, >500UMI < 50k UMIs as cut-offs.\
+We next evaluate the impact of cut-off selection for number of genes and UMIs per cell on cells retained in the analysis (Fig. \ref{fig:cutoffs}). No clear cut-offs are suggested in elbow plots (not shown). Increasing the lower gene cut-off to 400 cells would exclude 1,725 cells, a large fraction of which are neurons (Fig. \ref{fig:cutoffs} C). All identified cell states (clusters) are present at a lower cut-off of 300 genes per cell. On the high end (> 7000 genes) we find that cells contribute to multiple clusters not suggesting that particular doublet categories can be excluded via cut-off selection. We also explore the cells that each library contributes to the data set (Fig. \ref{fig:cellplib}). We find comparable contributions from libraries that were generated using whole animals (Fig. \ref{fig:cellplib} B-G, L-N). In libraries that contained sexually reproducing animals (Fig. \ref{fig:cellplib} H-K) the ratio of germline cells is increased. Neuronal libraries are predominantly composed of neuronal progenitors and differentiated neurons as well as, at lower numbers, of other interstitial somatic cells such as gland cells and nematocytes. For the down-stream analyses we settled on >300 < 7k genes, >500UMI < 50k UMIs as cut-offs.\
 
 ```{r cutoff_exploration, echo=FALSE, warning=F, results='hide'}
 
