--- a/SA08_MotifEnrichmentAnalysis.Rmd
+++ b/SA08_MotifEnrichmentAnalysis.Rmd
@@ -1,6 +1,7 @@
 ---
-title: "Enrichment Analysis"
+title: "SA08 - Enrichment Analysis"
 author: "Jack Cazet"
+date: "October 21, 2018, updated on July 9, 2019"
 header-includes: #allows you to add in your own Latex packages
 - \usepackage{float} #use the 'float' package
 - \floatplacement{figure}{H} #make every figure with caption = h
@@ -11,13 +12,13 @@ output:
 geometry: margin = 1in
 ---
 
-The code below is designed to identify transcription factors (TFs) that are likely to play an functional role in coordinating transcriptional cell states in *Hydra*. To do this, we test for motif enrichment in the regulatory sequences of coexpressed genes. We then identify TFs that (1) belong to the set of coexpressed genes and (2) can bind to one of the enriched motifs. TFs that meet these criteria are considered likely to play an important role in regulating that gene coexpression module.
+The code below is designed to identify transcription factors (TFs) that are likely to play a functional role in coordinating transcriptional cell states in *Hydra*. To do this, we test for motif enrichment in the regulatory sequences of coexpressed genes. We then identify TFs that (1) belong to the set of coexpressed genes and (2) can bind to one of the enriched motifs. TFs that meet these criteria are considered likely to play an important role in regulating that gene coexpression module.
 
-To perform this analysis we need to know (1) which genes are coexpressed, (2) where putative regulatory sequences are in the genome, (3) which transcripts are likely to be TFs, and (4) what motifs those putative TFs are likely to bind. Information on (1) will be determined using non-negative factorization to identify coexpressed gene modules (metagenes). (2) will be drawn from a consensus peakset derived from whole-animal ATAC-seq data. (3) and (4) will use a combination of pfam anotations and the profile inference tool from the JASPAR RESTful API.
+To perform this analysis we need to know (1) which genes are coexpressed, (2) where putative regulatory sequences are in the genome, (3) which transcripts are likely to be TFs, and (4) what motifs those putative TFs are likely to bind. Information on (1) will be determined using non-negative factorization to identify coexpressed genes (metagenes or gene modules). (2) will be drawn from a consensus peakset derived from whole-animal ATAC-seq data. (3) and (4) will use a combination of Pfam annotations and the profile inference tool from the JASPAR RESTful API.
 
-![Workflow for the identification of master transcriptional regulators](enrichment_resources/S_Enrichment_Workflow.png)
+![Workflow for the identification of master transcriptional regulators](enrichment_resources/S_Enrichment_Workflow.jpg)
 
-  Figure 1 is a visual summary of the analysis. Headers throughout this markdown will refer back to the corresponding steps in the workflow to orient the reader. For a more detailed written explanation of this figure, refer to supplemental figure S23.
+  Figure 1 is a visual summary of the analysis. Headers throughout this markdown will refer back to the corresponding steps in the workflow to orient the reader. For a more detailed written explanation of this figure, refer to supplemental figure S34.
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(tidy.opts=list(width.cutoff=60),tidy=TRUE,dev="png",dpi=150)
@@ -36,16 +37,22 @@ library(plyr)
 library(dplyr)
 library(gplots)
 library(RColorBrewer)
+library(doParallel)
 
 ```
 
-###Preparation for Analysis
+### Preparation for Analysis
 
 In this chunk we establish our write path for file export and load several functions that we will need.
 
 ```{r Load Pre-existing Objects, cache.lazy=FALSE}
 
-ds.ds <- readRDS("objects/genome_S1_pc30.rds")
+ds.ds <- readRDS("objects/Hydra_Seurat_Whole_Genome.rds")
+
+annotations <- ds.ds@data@Dimnames[[1]]
+annotations <- data.frame(do.call('rbind', strsplit(annotations,"[|]")), stringsAsFactors = F)
+annotations[annotations[,1] == annotations[,2],2] <- NA
+colnames(annotations) <- c("ID","SP")
 
 writePath <- "./Enrichment_Results"
 dir.create(writePath)
@@ -60,6 +67,9 @@ printGenetSNE <- function (y,x,w) {
   FeaturePlot(y, x, cols.use=c("grey", "blue"), pt.size = 2)
   dev.off() 
 }
+
+#if you you would like to restore an environment from a previous session, execute the code below
+#load("./Enrichment_Results/enrichment_workspace.RData")
 ```
 
 
@@ -89,16 +99,19 @@ peaks <- peaks[peaks$distance <= 5000,]
 
 ```
 
-##Identifying Coexpressed Genes Using NMF Metagenes (A1)
+## Identifying Coexpressed Genes Using NMF Metagenes (A1)
 
-To identify gene coexpression modules, we will pull metagene information from the NMF analysis conducted on the genome-mapped, whole animal dataset (wg_K84). The initial NMF was calculated on a set of ~1800 variable genes. Because we want to extend our analysis to genes not included in the initial variable gene list, we will determine additional metagene member genes based on how well they correlate with the NMF cell scores. Instead of considering the correlation across all cells, we limit the calculation to those cells that recieve a non-zero score for the metagene in question. This reduces the amount of computation required and is more favorable to genes that may also be expressed elsewhere (allows for non-exclusivity). We also exclude lowly expressed genes (must be expressed in at least 20 cells and have a mean expression (excluding zeros) above 0.5). For downstream analyses we consider a gene to be a member of a metagene if it's correlation score is >= 0.4.
+To identify gene coexpression modules, we will pull metagene information from the NMF analysis conducted on the genome-mapped, whole animal dataset (wg_K84). The initial NMF was calculated on a set of ~1800 variable genes. Because we want to extend our analysis to genes not included in the initial variable gene list, we will determine additional metagene member genes based on how well they correlate with the NMF cell scores. Instead of considering the correlation across all cells, we limit the calculation to those cells that recieve a non-zero score for the metagene in question. This reduces the amount of computation required and is more favorable to genes that may also be expressed elsewhere (allows for non-exclusivity). We also exclude lowly expressed genes (must be expressed in at least 20 cells and have a mean expression (excluding zeros) above 0.5). For downstream analyses we consider a gene to be a member of a metagene if it's correlation score is > 0.4.
 
 ```{r Find Metagene Genes, results='asis'}
-#load DS dataset
-ds.ds <- readRDS("objects/genome_S1_pc30.rds")
 
 #pull cell scores from current NMF analysis (whole animal)
 cellScores <- read.csv("nmf/wg_K84/GoodMeta_CellScores.csv", row.names = 1)
+
+colnames(cellScores) <- gsub("X","",colnames(cellScores))
+colnames(cellScores) <- gsub("[.]","-",colnames(cellScores))
+
+cellScores <- t(cellScores)
 
 #remove scores of zero from cell scores so those cells are excluded from correlation analysis
 cellScores[cellScores == 0] <- NA
@@ -125,11 +138,14 @@ metaCor <- function(x) {
 }
 
 #Set up a parallel backend to perform a for loop that moves through all metagenes to check gene correlation
-library(doParallel)
 cl <- makeCluster(5)
 registerDoParallel(cl)
 
-corResults <- foreach(i=1:length(colnames(cellScores))) %dopar% metaCor(i)
+start_time <- Sys.time()
+corResults <- foreach(i=1:length(colnames(cellScores)), .verbose = T) %dopar% metaCor(i)
+end_time <- Sys.time()
+
+print(end_time - start_time)
 
 corResults.df <- as.data.frame(corResults)
 colnames(corResults.df) <- colnames(cellScores)
@@ -186,6 +202,8 @@ invisible(lapply(1:length(metaMark.genes), function(x) write.table(metaMark.gene
 If you want to verify the co-expression of the predicted metagene gene sets, execute the code below to generate tSNE plots for all metagene genes.
 
 ```{r Generate Metagene Gene Plots}
+#reload Seurat object
+ds.ds <- readRDS("objects/Hydra_Seurat_Whole_Genome.rds")
 
 #get a list of all files files in the output directory
 
@@ -246,18 +264,18 @@ pfam.hits.TFs <- pfam.hits.TFs[c(1,4)]
 
 ## Identify Transcription Factors Correlated with Gene Coexpression Modules
 
-At this stage we can start identifying putative regulators of co-expressed genes based on TF correlation alone. While these candidates may or may not be supported by motif enrichment, they may still be of interest. Run this chunk of code to generate plots for all TFs that have a correlation score at or above 0.3 for each metagene (we opted to slightly lower the correlation cutoff to catch more marginal TFs that might still be of interest).
+At this stage we can start identifying putative regulators of co-expressed genes based on TF correlation alone. While these candidates may or may not be supported by motif enrichment, they may still be of interest. Run this chunk of code to generate plots for all TFs that have a correlation score above 0.3 for each metagene (we opted to slightly lower the correlation cutoff to catch more marginal TFs that might still be of interest).
 
 ```{r ID Metagene TFs}
 
 #add columns for TF rank for each metagene
 corResults.df$ID <- gsub("[|].*","",rownames(corResults.df))
 
-pfam.hits.TFs.scored <- merge(pfam.hits.TFs, corResults.df, by.x = "V4", by.y = "ID")
+pfam.hits.TFs.scored <- corResults.df[gsub("[.].*","",corResults.df$ID) %in% pfam.hits.TFs$V4,]
 
-#get list of top twenty TFs for each metagene
-topTfs <- apply(pfam.hits.TFs.scored[,3:length(pfam.hits.TFs.scored)], 2, function(x) {
-  df <- data.frame(name = paste0(pfam.hits.TFs.scored[,1],"__",pfam.hits.TFs.scored[,2]), score = x)
+#get list of top TFs for each metagene
+topTfs <- apply(pfam.hits.TFs.scored[,1:(ncol(pfam.hits.TFs.scored) -1)], 2, function(x) {
+  df <- data.frame(name = pfam.hits.TFs.scored$ID, score = x)
   df <- df[df$score > 0.3,]
   df
 })
@@ -273,7 +291,7 @@ printGenetSNE <- function (y,x,z) {
 }
 
 #reload seurat object
-ds.ds <- readRDS("objects/genome_S1_pc30.rds")
+ds.ds <- readRDS("objects/Hydra_Seurat_Whole_Genome.rds")
 
 #plot top TFs for each metagene
 for (i in 1:length(topTfs)) {
@@ -300,7 +318,7 @@ invisible(lapply(1:length(topTfs), function(x) write.table(topTfs[[x]][,1], file
 
 In order to link regulatory sequence to potential regulators, we need to know the sequences bound by *Hydra* TFs. There are no *Hydra* TF binding data, so we need to rely on homology to assign binding motifs. JASPAR provides a means of doing this (through the RESTful API; **requires internet connection**) by identifying DNA binding regions in provided amino acid sequences and matching them to homologous domains for which the binding preference has been determined. It returns the motifs for the homologous domains. We can then search for these sequences in promoters to test for enrichment. If we do observe enrichment for a particular motif we can then link it to the TFs that were predicted to bind that motif.
 
-##Identify Binding Motifs Using JASPAR Profile Inference (B2)
+## Identify Binding Motifs Using JASPAR Profile Inference (B2)
 
 ```{r Get JASPAR Motifs, eval = FALSE}
 
@@ -419,7 +437,7 @@ rm *.final.motif
 
 ```
 
-##Link JASPAR Motif to Pfam IDs Using Swissprot (B3)
+## Link JASPAR Motif to Pfam IDs Using Swissprot (B3)
 
 There are many instances in which TFs do not recieve a match through the JASPAR profile inference tool; however, in many cases these TFs will have an annotation for a DNA binding domain that has a highly conserved core binding motif (such as bZIPs or bHLHs). By identifying the Pfam domains associated with particular motifs (via JASPAR and Swissprot), we can infer matches to enriched motifs based on domain composition of putative TFs.
 
@@ -590,7 +608,7 @@ names(motifs.results) <- gsub(paste0(writePath,"/"),"",names(motifs.results))
 
 ```
 
-##Determine Plausible TF-Motif Interactions and Identify Potential Regulators (B4)
+## Determine Plausible TF-Motif Interactions and Identify Potential Regulators (B4)
 
 Next, we want to match the enriched motifs to TFs that are expressed in a particular metagene. To do this we will go through each metagene and check if there is a TF predicted to bind an enriched motif that also has a correlation score above 0.3. We compile a list of all positive matches that summarizes the enrichment results.
 
@@ -613,6 +631,195 @@ TF.match <- vector("list", length = length(motifs.results))
 #move through the list of results for all the metagenes with significant hits
 for (i in 1:length(motifs.results)) {
   
+  #pull the q-value score and calculate the fold enrichment for each motif
+  qvals <- lapply(motifs.results[[i]], function(x) {
+    enrichDF <- enrich.results[[i]]
+    enrichDF[grepl(x,enrichDF$Name),"qval"]
+  })
+  
+  qvals <- unlist(qvals)
+  
+  FCs <- lapply(motifs.results[[i]], function(x) {
+    fcDF <- enrich.results[[i]]
+    fcTarget <- fcDF[grepl(x,fcDF$Name), "targetPercent"]
+    fcTarget <- as.numeric(gsub("[%]","",fcTarget))
+    fcBack <- fcDF[grepl(x,fcDF$Name), "backgroundPercent"]
+    fcBack <- as.numeric(gsub("[%]","",fcBack))
+    round(fcTarget/fcBack, digits = 3)
+  })
+  
+  FCs <- unlist(FCs)
+  
+  #identify the list of TFs associated with the motifs (via JASPAR) found for the metagene in question
+  geneList <- lapply(motifs.results[[i]], function(x) genes.motifs.df[grep(x, genes.motifs.df$motifs),"ID"])
+  
+  #do the same but using the PFAM results
+  pfamList <- lapply(motifs.results[[i]], function(x) {
+    if(length(pfam.lookup[grep(x, pfam.lookup$motifs),"hydra_match"]) !=0) {
+         strsplit(pfam.lookup[grep(x, pfam.lookup$motifs),"hydra_match"],",")[[1]]
+    } else {
+      return("")
+    }
+    })
+  
+  #keep only those TFs that are correlated with the metagene in question
+  for (j in 1:length(geneList)) {
+    DF <- geneList[[j]]
+    DF <- DF[DF %in% gsub("[.]t.*","",names(corResults.keep[[names(motifs.results)[i]]]))]
+    geneList[[j]] <- DF
+  }
+  
+  for (j in 1:length(pfamList)) {
+    DF <- pfamList[[j]]
+    DF <- DF[DF %in% gsub("[.]t.*","",names(corResults.keep[[names(motifs.results)[i]]]))]
+    pfamList[[j]] <- DF
+  }
+  
+  #pull the correlation scores for each TF that was included
+  scores <- lapply(geneList, function(x) corResults.df[match(x,gsub("[.]t.*","",rownames(corResults.df))),names(motifs.results)[i]])
+  
+  scores <- lapply(scores, function(x) round(x, digits = 3))
+  
+  PfamScores <- lapply(pfamList, function(x)
+   corResults.df[match(x,gsub("[.]t.*","",rownames(corResults.df))),names(motifs.results)[i]])
+  
+  PfamScores <- lapply(PfamScores, function(x) round(x, digits = 3))
+  
+  #pull the swissprot annotations for each candidate regulators
+  jaspSP <- lapply(geneList, function(x) {
+    if (length(x) == 0) {
+      ""
+    } else {
+      annotations[gsub("[.].*","",annotations$ID) %in% x,2]
+    }
+  })
+  
+  for (j in 1:length(jaspSP)) {
+    DF <- jaspSP[[j]]
+    DF <- na.omit(DF)
+    jaspSP[[j]] <- DF
+  }
+  
+  pfamSP <- lapply(pfamList, function(x) {
+    if (length(x) == 0) {
+      ""
+    } else {
+      annotations[gsub("[.].*","",annotations$ID) %in% x,2]
+    }
+  })
+
+  for (j in 1:length(pfamSP)) {
+    DF <- pfamSP[[j]]
+    DF <- na.omit(DF)
+    pfamSP[[j]] <- DF
+  }
+  
+  #collapse the list of TFs into a single character string
+  geneList <- unlist(lapply(geneList, function(x) paste(x, collapse = ",")))
+  pfamList <- unlist(lapply(pfamList, function(x) paste(x, collapse = ",")))
+
+  
+  jaspSP <- unlist(lapply(jaspSP, function(x) paste(x, collapse = ",")))
+  
+  pfamSP <- unlist(lapply(pfamSP, function(x) paste(x, collapse = ",")))
+  
+  #do the same for the scores
+  scores <- unlist(lapply(scores, function(x) paste(x, collapse = ",")))
+  
+  #do the same for the pfam results
+  pfamList <- unlist(lapply(pfamList, function(x) paste(x, collapse = ",")))
+  
+  PfamScores <- unlist(lapply(PfamScores, function(x) paste(x, collapse = ",")))
+  
+  #combine everything into a data frame with the motif, it's associated TFs, and the metagene correlation score
+  TF.match[[i]] <- data.frame(motif_id = motifs.results[[i]], qvalue = qvals,
+                              FoldChange = FCs, TF = geneList, 
+                              jSP = jaspSP, CorScore = scores, pfamTF = pfamList, 
+                              pSP = pfamSP, pfamCorScore = PfamScores)
+}
+
+#fix the names to keep metagene ID
+names(TF.match) <- gsub("X","wg",names(motifs.results))
+
+#remove empty entries 
+for (i in 1:length(TF.match)) {
+  DF <- TF.match[[i]]
+  DF <- DF[(DF$TF != "") | (DF$pfamTF != ""),]
+  TF.match[[i]] <- DF
+}
+
+TF.match[sapply(TF.match, function(x) nrow(x) == 0)] <- NULL
+
+#collapse list to DF
+TF.match <- ldply(TF.match)
+
+motifSymbol.list <- unique(TF.match$motif_id)
+motifSymbol <- vector("character", length(motifSymbol.list))
+#pull names for all the jaspar motifs
+for (i in 1:length(motifSymbol.list)) {
+  link <- paste0("http://jaspar.genereg.net/api/v1/matrix/",motifSymbol.list[i],"/")
+  result <- fromJSON(url(link))
+  result <- result[["name"]]
+  if(length(result != 0)) {
+    motifSymbol[i] <- result
+  }
+}
+
+motifSymbol <- data.frame(ID = as.character(motifSymbol.list), name = as.character(motifSymbol), stringsAsFactors = F)
+
+TF.match$JasparName <- mapvalues(TF.match$motif_id, from = motifSymbol$ID, to = motifSymbol$name)
+
+#reorder columns
+TF.match <- TF.match[,c(1:2,11,3:10)]
+
+#export table
+write.csv(TF.match, file = paste0(writePath,"/TF.match.csv"))
+```
+
+We can also make a version of the TF match dataframe that is far more permissive (correlation cutoff of 0.1) and that has a separate row for each candidate regulator. With this format, the exported file can be used for exploration in excel by filtering the results on the fly using different correlation cutoffs. 
+
+```{r Permissive TF Match, results='asis'}
+
+corResults.df$ID <- NULL
+
+genes.motifs.df$ID <- as.character(genes.motifs.df$ID)
+genes.motifs.df$motifs <- as.character(genes.motifs.df$motifs)
+
+#loosen cutoff to catch marginal TFs
+corResults.keep <- apply(corResults.df,2,function(x) x[x > 0.1])
+
+
+#identify those TFs that likely bind to a particular motif and that are correlated with the metagene of interest
+
+#initialize empty results object
+TF.match <- vector("list", length = length(motifs.results))
+
+#move through the list of results for all the metagenes with significant hits
+for (i in 1:length(motifs.results)) {
+  
+  #pull the q-value score and calculate the fold enrichment for each motif
+  qvals <- lapply(motifs.results[[i]], function(x) {
+    enrichDF <- enrich.results[[i]]
+    enrichDF[grepl(x,enrichDF$Name),"qval"]
+  })
+  
+  names(qvals) <- motifs.results[[i]]
+  
+  qvals <- unlist(qvals)
+  
+  FCs <- lapply(motifs.results[[i]], function(x) {
+    fcDF <- enrich.results[[i]]
+    fcTarget <- fcDF[grepl(x,fcDF$Name), "targetPercent"]
+    fcTarget <- as.numeric(gsub("[%]","",fcTarget))
+    fcBack <- fcDF[grepl(x,fcDF$Name), "backgroundPercent"]
+    fcBack <- as.numeric(gsub("[%]","",fcBack))
+    round(fcTarget/fcBack, digits = 3)
+  })
+  
+  names(FCs) <- motifs.results[[i]]
+  
+  FCs <- unlist(FCs)
+  
   #identify the list of TFs associated with the motifs (via JASPAR) found for the metagene in question
   geneList <- lapply(motifs.results[[i]], function(x) genes.motifs.df[grep(x, genes.motifs.df$motifs),"ID"])
   
@@ -628,46 +835,126 @@ for (i in 1:length(motifs.results)) {
   #keep only those TFs that are correlated with the metagene in question
   geneList <- lapply(geneList, function(x) x[x %in% gsub("[.]t.*","",names(corResults.keep[[names(motifs.results)[i]]]))])
   
+  geneList <- lapply(geneList, function(x)
+    if (length(x) == 0) {
+    x <- "NA"
+    } else {
+    x <- x
+    })
+  
+  names(geneList) <- motifs.results[[i]]
+  
   pfamList <- lapply(pfamList, function(x) x[x %in% gsub("[.]t.*","",names(corResults.keep[[names(motifs.results)[i]]]))])
+  
+  pfamList <- lapply(pfamList, function(x)
+    if (length(x) == 0) {
+    x <- "NA"
+    } else {
+    x <- x
+    })
+  
+  names(pfamList) <- motifs.results[[i]]
   
   #pull the correlation scores for each TF that was included
   scores <- lapply(geneList, function(x) corResults.df[match(x,gsub("[.]t.*","",rownames(corResults.df))),names(motifs.results)[i]])
   
+  scores <- lapply(scores, function(x) round(x, digits = 3))
+
+  names(scores) <- motifs.results[[i]]
+  
   PfamScores <- lapply(pfamList, function(x)
    corResults.df[match(x,gsub("[.]t.*","",rownames(corResults.df))),names(motifs.results)[i]])
   
+  PfamScores <- lapply(PfamScores, function(x) round(x, digits = 3))
+  
+  names(PfamScores) <- motifs.results[[i]]
+  
   #collapse the list of TFs into a single character string
-  geneList <- unlist(lapply(geneList, function(x) paste(x, collapse = ",")))
+  geneList <- as.data.frame(unlist(lapply(geneList, function(x) c(x))))
   
   #do the same for the scores
-  scores <- unlist(lapply(scores, function(x) paste(x, collapse = ",")))
+  scores <- as.data.frame(unlist(lapply(scores, function(x) c(x))))
   
   #do the same for the pfam results
-  pfamList <- unlist(lapply(pfamList, function(x) paste(x, collapse = ",")))
+  pfamList <- as.data.frame(unlist(lapply(pfamList, function(x) c(x))))
   
-  PfamScores <- unlist(lapply(PfamScores, function(x) paste(x, collapse = ",")))
+  PfamScores <- as.data.frame(unlist(lapply(PfamScores, function(x) c(x))))
+  
+  #consolidate pfam results
+  pfamRes <- cbind(pfamList,PfamScores)
+  
+  pfamRes$MotifID <- substr(rownames(pfamRes),1,8)
+  
+  #bring in swissprot annotations
+  pfamRes$pfamAnnot <- mapvalues(pfamRes[,1], from = gsub("[.].*","", annotations$ID), to = annotations$SP)
+  
+  #consolidate jaspar results
+  jaspRes <- cbind(geneList, scores)
+  
+  jaspRes$MotifID <- rownames(jaspRes)
+  
+  #bring in swissprot results
+  jaspRes$jaspAnnot <- as.character(mapvalues(jaspRes[,1], from = gsub("[.].*","", annotations$ID), to = annotations$SP))
+  
+  #merge results from swissprot and pfam
+  fullRes <- merge(jaspRes, pfamRes, by = "MotifID", all.y = T)
+  
+  colnames(fullRes) <- c("MotifID","JasparGene","JasparCor","JasparAnnot","pfamGene","pfamCor","pfamAnnot")
+  
+  fullRes$JasparGene <- as.character(fullRes$JasparGene)
+  
+  fullRes$pfamGene <- as.character(fullRes$pfamGene)
+  
+  fullRes[is.na(fullRes)] <- "NA"
+  
+  #remove duplicated entries introduced by the merge
+  fullRes[fullRes$JasparGene != fullRes$pfamGene,c(2,3,4)] <- "NA"
+  
+  #drop rows that have all NAs
+  fullRes <- fullRes[apply(fullRes,1,function(x) length(unique(x))) > 2,]
+  
+  fullRes$qValue <- mapvalues(fullRes$MotifID, from = names(qvals), to = qvals)
+  
+  fullRes$FC <- mapvalues(fullRes$MotifID, from = names(FCs), to = FCs)
   
   #combine everything into a data frame with the motif, it's associated TFs, and the metagene correlation score
-  TF.match[[i]] <- data.frame(motif_id = motifs.results[[i]], TF = geneList, CorScore = scores, pfamTF = pfamList, pfamCorScore = PfamScores)
+  TF.match[[i]] <- fullRes
 }
 
 #fix the names to keep metagene ID
-names(TF.match) <- names(motifs.results)
-
-#remove empty entries 
-for (i in 1:length(TF.match)) {
-  DF <- TF.match[[i]]
-  DF <- DF[(DF$TF != "") | (DF$pfamTF != ""),]
-  TF.match[[i]] <- DF
-}
+names(TF.match) <- gsub("X","wg",names(motifs.results))
 
 TF.match[sapply(TF.match, function(x) nrow(x) == 0)] <- NULL
 
 #collapse list to DF
 TF.match <- ldply(TF.match)
 
+motifSymbol.list <- unique(TF.match$MotifID)
+motifSymbol <- vector("character", length(motifSymbol.list))
+#pull names for all the jaspar motifs
+for (i in 1:length(motifSymbol.list)) {
+  link <- paste0("http://jaspar.genereg.net/api/v1/matrix/",motifSymbol.list[i],"/")
+  result <- fromJSON(url(link))
+  result <- result[["name"]]
+  if(length(result != 0)) {
+    motifSymbol[i] <- result
+  }
+}
+
+motifSymbol <- data.frame(ID = as.character(motifSymbol.list), name = as.character(motifSymbol), stringsAsFactors = F)
+
+
+TF.match$JasparName <- mapvalues(TF.match$MotifID, from = motifSymbol$ID, to = motifSymbol$name)
+
+#drop NAs from DF
+TF.match[TF.match == "NA"] <- ""
+
+#reorder columns
+
+TF.match <- TF.match[,c(1,2,11,9,10,3,5,4,6,8,7)]
+
 #export table
-write.csv(TF.match, file = paste0(writePath,"/TF.match.csv"))
+write.csv(TF.match, file = paste0(writePath,"/permissive.TF.match.csv"), row.names = F)
 ```
 
 Another way to visualize the enrichment results is to focus on the transcription factors predicted to be key metagene regulators. Below, we move through a list of all TFs that were predicted to regulate at least one metagene and generate tSNE plots both for the TF in question as well as the cell scores for all metagenes predicted to be regulated by that TF.
@@ -774,7 +1061,7 @@ for (i in 1:length(motifList)) {
 
 ```
 
-Finally, we can survey all motif enrichment results for all metagenes by generating a binary enrichment heatmap, to visualize broader trends in transcriptional regulation. This figure corresponds to supplementary figure S22.
+Finally, we can survey all motif enrichment results for all metagenes by generating a binary enrichment heatmap, to visualize broader trends in transcriptional regulation. This figure corresponds to supplementary figure S35.
 
 ```{r Motif Heatmap plot, include=FALSE}
 #convert the motif results list into data frame that will be the basis for the heatmap
@@ -788,7 +1075,7 @@ motifs.results.DF <- data.frame(names = names(motifs.results.DF), motifs = unlis
 #load metagene annotations
 metaMap <- read.table("enrichment_resources/metaMap.txt", stringsAsFactors = F)
 
-metaMap$V2 <- gsub("X", "G", metaMap$V2)
+metaMap$V2 <- gsub("X", "WG", metaMap$V2)
 
 motifHeat <- vapply(motifs.results, function (x) {
   as.numeric(motifList %in% x)
@@ -802,23 +1089,45 @@ rownames(motifHeat) <- plyr::mapvalues(rownames(motifHeat), from = motifList, to
 motifHeat <- t(motifHeat)
 
 rowOrder <- c(
-  "NEMATO_MID_G32","NEMATO_MIDLATE_G13","NEMATO_MIDLATE_G46","NEMATO_LATE_G54","NEMATO_LATE_G43","NEMATO_LATE_G60",
-  "NEMATO_LATE_G28","NEMATO_LATE_G16","NEMATO_LATE_G27","NEMATO_LATELATE_G52","NEMATO_LATELATE_G75","NEMATO_MATURE_G36",
-  
-  "FEM_LATE_G7", "FEM_LATE_G11",
-  
-  "MALE_EARLY_G78","MALE_LATE_G26",
-  
-  "ZYMO_MUC_G19", "MUC_LOWER_G76",
-  
-  "ZYMO_UBC_G61","ZYMO_UBC_G15","ZYMO_MBC_G38","ZYMO_LBC_G62","ZYMO_LBC1_G18",
-  
-  "NEURO_SUBTYPE_G44",
-  
-  "ECTO_TENT_G45","ECTO_TENT_G71","ECTO_BC_G20","ECTO_BC_G17","ECTO_PED_G83","ECTO_FOOT_G69","ECTO_FOOT_G31",
-  
-  "ENDO_TENT_G35","ENDO_HEAD_G67","ENDO_THROUGHOUT_G5","ENDO_THROUGHOUT_G58","ENDO_THROUGHOUT_G14","ENDO_THROUGHOUT_G0",
-  "ENDO_LBC_G25","ENDO_FOOT_G47")
+  "NB_MID_WG32",
+  "NB_MIDLATE_WG13",
+  "NB_MIDLATE_WG46",
+  "NB_MIDLATE_WG27",
+  "NB_LATE_WG54",
+  "NB_LATE_WG43",
+  "NB_LATE_WG60",
+  "NB_LATE_WG28",
+  "NB_LATE_WG16",
+  "NEM_MATURE_WG52",
+  "NEM_MATURE_WG75",
+  "NEM_MATURE_WG36",
+  "FMGL2_NURSE_WG7",
+  "FMGL2_NURSE_WG11",
+  "MGL_EARLY_WG78",
+  "MGL_WG26",
+  "ZMG_MGC_WG19",
+  "SMGC_LOWER_WG76",
+  "GMGC_HEAD_WG61",
+  "GMGC_HEAD_WG15",
+  "ZMG_UBC_WG62",
+  "ZMG_WG38",
+  "ZMG_WG18",
+  "NEURO_EN1_WG44",
+  "ECTO_TENT_WG45",
+  "ECTO_TENT_WG71",
+  "ECTO_BC_WG20",
+  "ECTO_BC_WG17",
+  "ECTO_PED_WG83",
+  "ECTO_FOOT_WG69",
+  "ECTO_FOOT_WG31",
+  "ENDO_TENT_WG35",
+  "ENDO_HEAD_WG67",
+  "ENDO_THROUGHOUT_WG5",
+  "ENDO_THROUGHOUT_WG58",
+  "ENDO_THROUGHOUT_WG14",
+  "ENDO_THROUGHOUT_WG0",
+  "ENDO_BC_WG25",
+  "ENDO_FOOT_WG47")
 
 rowIndex <- vapply(rowOrder, function(x) which(rownames(motifHeat)==x), numeric(1))
 
@@ -826,62 +1135,96 @@ motifHeat <- motifHeat[rowIndex,]
 
 colOrder <- c(
   "Paired domain only_PAX5_MA0014.2",
+  "Paired domain only_PAX1_MA0779.1",
+  "Paired plus homeo domain_Pax6_MA0069.1",
+  "Paired domain only_PAX9_MA0781.1",
+  
   
   "More than 3 adjacent zinc finger factors_ZIC4_MA0751.1",
-
+  
   "Forkhead box (FOX) factors_FHL1_MA0295.1",
-  "Forkhead box (FOX) factors_FOXF2_MA0030.1","Forkhead box (FOX) factors_pha-4_MA0546.1",
-  "Forkhead box (FOX) factors_FKH2_MA0297.1","Forkhead box (FOX) factors_FOXG1_MA0613.1",
+  "Forkhead box (FOX) factors_FOXF2_MA0030.1",
+  "Forkhead box (FOX) factors_pha-4_MA0546.1",
+  "Forkhead box (FOX) factors_FKH2_MA0297.1",
+  "Forkhead box (FOX) factors_FOXG1_MA0613.1",
   "Forkhead box (FOX) factors_FKH1_MA0296.1",
-  "Forkhead box (FOX) factors_Foxk1_MA0852.1","Forkhead box (FOX) factors_FOXA1_MA0148.3",
-  "Forkhead box (FOX) factors_Foxa2_MA0047.2",
+  "Forkhead box (FOX) factors_Foxk1_MA0852.1",
+  "Forkhead box (FOX) factors_FOXA1_MA0148.3",
   
-  "PAS domain factors_ARNT::HIF1A_MA0259.1", "PAS domain factors_Arnt_MA0004.1",
+  "PAS domain factors_ARNT::HIF1A_MA0259.1",
+  "PAS domain factors_Arnt_MA0004.1",
   
-  "POU domain factors_POU4F2_MA0683.1","POU domain factors_POU4F3_MA0791.1",
+  "POU domain factors_POU4F2_MA0683.1",
+  "POU domain factors_POU4F3_MA0791.1",
   "POU domain factors_unc-86_MA0926.1",
   
   "Early B-Cell Factor-related factors_EBF1_MA0154.3",
   
-  "RFX-related factors_RFX3_MA0798.1", "RFX-related factors_RFX4_MA0799.1",
-  "RFX-related factors_RFX5_MA0510.2","RFX-related factors_Rfx1_MA0509.1",
+  "RFX-related factors_RFX3_MA0798.1",
+  "RFX-related factors_RFX4_MA0799.1",
+  "RFX-related factors_RFX5_MA0510.2",
+  "RFX-related factors_Rfx1_MA0509.1",
   "RFX-related factors_RFX2_MA0600.2",
   
   "Brachyury-related factors_TBX19_MA0804.1",
   
-  "E2A-related factors_TCF4_MA0830.1","E2A-related factors_Tcf12_MA0521.1",
+  "E2A-related factors_TCF4_MA0830.1",
+  "E2A-related factors_Tcf12_MA0521.1",
   "E2A-related factors_TCF3_MA0522.2",
   
   "Tal-related factors_TAL1::TCF3_MA0091.1",
   
-  "Other factors with up to three adjacent zinc fingers_ZNF740_MA0753.1","Ets-related factors_ELK4_MA0076.2",
-  "CREB-related factors_Creb3l2_MA0608.1","Three-zinc finger Krüppel-related factors_SP1_MA0079.3",
-  "Three-zinc finger Krüppel-related factors_KLF5_MA0599.1","TALE-type homeo domain factors_PBX1_MA0070.1",
-  "Jun-related factors_JUND_MA0491.1","Ets-related factors_Ets21C_MA0916.1",
-  
-  "Ets-related factors_ETV3_MA0763.1","Ets-related factors_ETV6_MA0645.1",
-  "Ets-related factors_SPDEF_MA0686.1","Ets-related factors_EHF_MA0598.2",
-  "Ets-related factors_ELF1_MA0473.2","Ets-related factors_ELF4_MA0641.1",
-  "Ets-related factors_ELK1_MA0028.2","Ets-related factors_ETV2_MA0762.1",
-  "Ets-related factors_ELK3_MA0759.1","Ets-related factors_ETS1_MA0098.3",
-  "Ets-related factors_ERF_MA0760.1","Ets-related factors_ETV4_MA0764.1",
-  "Ets-related factors_FLI1_MA0475.2","Ets-related factors_ETV1_MA0761.1",
-  "Ets-related factors_ETV5_MA0765.1","Ets-related factors_ERG_MA0474.2",
+  "Other factors with up to three adjacent zinc fingers_ZNF740_MA0753.1",
+  "CREB-related factors_Creb3l2_MA0608.1",
+  "Three-zinc finger Krüppel-related factors_SP1_MA0079.3",
+  "Three-zinc finger Krüppel-related factors_KLF5_MA0599.1",
+  "TALE-type homeo domain factors_PBX1_MA0070.1",
+  "Jun-related factors_JUND_MA0491.1",
+
+  "Ets-related factors_ELK4_MA0076.2",
+  "Ets-related factors_Ets21C_MA0916.1",
+  "Ets-related factors_ETV3_MA0763.1",
+  "Ets-related factors_ETV6_MA0645.1",
+  "Ets-related factors_SPDEF_MA0686.1",
+  "Ets-related factors_EHF_MA0598.2",
+  "Ets-related factors_ELF1_MA0473.2",
+  "Ets-related factors_ELF4_MA0641.1",
+  "Ets-related factors_ELK1_MA0028.2",
+  "Ets-related factors_ETV2_MA0762.1",
+  "Ets-related factors_ELK3_MA0759.1",
+  "Ets-related factors_ETS1_MA0098.3",
+  "Ets-related factors_ERF_MA0760.1",
+  "Ets-related factors_ETV4_MA0764.1",
+  "Ets-related factors_FLI1_MA0475.2",
+  "Ets-related factors_ETV1_MA0761.1",
+  "Ets-related factors_ETV5_MA0765.1",
+  "Ets-related factors_ERG_MA0474.2",
   "Ets-related factors_FEV_MA0156.2",
   
-  "CREB-related factors_Crem_MA0609.1","CREB-related factors_Atf1_MA0604.1",
-  "Jun-related factors_ATF7_MA0834.1","XBP-1-related factors_XBP1_MA0844.1",
-  "Jun-related factors_JUND(var.2)_MA0492.1","Jun-related factors_JUN_MA0488.1",
-  "C/EBP-related_DBP_MA0639.1","CREB-related factors_CREB1_MA0018.2",
+  "CREB-related factors_Crem_MA0609.1",
+  "CREB-related factors_Atf1_MA0604.1",
+  "Jun-related factors_ATF7_MA0834.1",
+  "XBP-1-related factors_XBP1_MA0844.1",
+  "Jun-related factors_JUND(var.2)_MA0492.1",
+  "Jun-related factors_JUN_MA0488.1",
+  "C/EBP-related_DBP_MA0639.1",
+  "CREB-related factors_CREB1_MA0018.2",
   
-  "Paired-related HD factors_Crx_MA0467.1","Paired-related HD factors_Ptx1_MA0201.1",
-  "Paired-related HD factors_oc_MA0234.1","Paired-related HD factors_OTX1_MA0711.1",
+  "Paired-related HD factors_Crx_MA0467.1",
+  "Paired-related HD factors_Ptx1_MA0201.1",
+  "Paired-related HD factors_oc_MA0234.1",
+  "Paired-related HD factors_OTX1_MA0711.1",
   "Paired-related HD factors_Arx_MA0874.1",
-  "Paired-related HD factors_Alx4_MA0853.1","Paired-related HD factors_Alx1_MA0854.1",
+  "Paired-related HD factors_Alx4_MA0853.1",
+  "Paired-related HD factors_Alx1_MA0854.1",
   
-  "NFY_NFYA_MA0060.2","Paired plus homeo domain_PAX7_MA0680.1",
-  "TALE-type homeo domain factors_hth_MA0227.1","bHLH-ZIP factors_USF1_MA0093.2",
-  "bHLH-ZIP factors_USF2_MA0526.1","bHLH-ZIP factors_TFEB_MA0692.1"
+  "NFY_NFYA_MA0060.2",
+  "Paired plus homeo domain_PAX7_MA0680.1",
+  "TALE-type homeo domain factors_hth_MA0227.1",
+  "bHLH-ZIP factors_USF1_MA0093.2",
+  "bHLH-ZIP factors_USF2_MA0526.1",
+  "bHLH-ZIP factors_TFEB_MA0692.1",
+  "Three-zinc finger Krüppel-related factors_EGR2_MA0472.2"
 )
 
 colIndex <- vapply(colOrder, function(x) which(colnames(motifHeat)==x), numeric(1))
@@ -890,7 +1233,6 @@ motifHeat <- motifHeat[,colIndex]
 
 #export binary heatmap as csv
 #write.csv(motifHeat, file = "motifHeatmapFull.csv")
-
 ```
 
 ```{r, eval=TRUE, echo=FALSE, fig.height = 8, fig.width = 10, out.height="50%", fig.align='center', fig.cap= "Motif Enrichment Matrix for wg K=84 Metagenes"}
@@ -903,16 +1245,17 @@ col.colors <- col.colors(15)
 
 heatmap.2(motifHeat,dendrogram='none', Rowv=FALSE, Colv=FALSE,trace='none', key = FALSE, 
           keysize = 0.1, margins = c(22,12), col = c("snow2","black"), 
-          colsep = c(1,2,11,13,16,17,22,23,27,35,52,60,64,67),
-          rowsep = c(12,14,16,18,23,24,31),
+          colsep = c(4,5,13,15,18,19,24,25,29,36,54,62,66,69),
+          rowsep = c(12,14,16,20,23,24,31),
           RowSideColors = c(rep(row.colors[1],12),rep(row.colors[2],2),
-                            rep(row.colors[3],2),rep(row.colors[4],2),rep(row.colors[5],5),
+                            rep(row.colors[3],2),rep(row.colors[4],4),rep(row.colors[5],3),
                             row.colors[6],rep(row.colors[7],7),rep(row.colors[8],8)),
-          ColSideColors = c(col.colors[1],col.colors[2], rep(col.colors[3],9),
+          ColSideColors = c(rep(col.colors[1],4),col.colors[2], rep(col.colors[3],8),
                             rep(col.colors[4],2), rep(col.colors[5],3), col.colors[6],
                             rep(col.colors[7],5), col.colors[8], rep(col.colors[9],4),
-                            rep(col.colors[10],8), rep(col.colors[11],17), rep(col.colors[12],8),
-                            rep(col.colors[13],4), rep(col.colors[14],3), rep(col.colors[15],6)))
+                            rep(col.colors[10],7), rep(col.colors[11],18), rep(col.colors[12],8),
+                            rep(col.colors[13],4), rep(col.colors[14],3),
+                            rep(col.colors[15],7)))
 
 ```
           
@@ -920,7 +1263,7 @@ heatmap.2(motifHeat,dendrogram='none', Rowv=FALSE, Colv=FALSE,trace='none', key 
 #Collapsing the full motif enrichment matrix was done by hand in excel
 
 #Collapsed version
-collapsedMotifHead <- read.csv("enrichment_resources/Collapsed_Enrichment_Matrix.csv", row.names = 1)
+collapsedMotifHead <- read.csv("enrichment_resources/collapsedHeatmap.csv", row.names = 1)
 
 collapsedMotifHead <- as.matrix(collapsedMotifHead)
 
@@ -929,7 +1272,7 @@ colnames(collapsedMotifHead) <- gsub("[.]"," ", colnames(collapsedMotifHead))
 heatmap.2(collapsedMotifHead, dendrogram = 'none',Rowv = FALSE, Colv = FALSE, trace = 'none', key = FALSE,
           keysize = 0.1, margins = c(10,11), col = c("snow2","black"),
           RowSideColors = c(rep(row.colors[1],12),rep(row.colors[2],2),
-                            rep(row.colors[3],2),rep(row.colors[4],2),rep(row.colors[5],5),
+                            rep(row.colors[3],2),rep(row.colors[4],4),rep(row.colors[5],3),
                             row.colors[6],rep(row.colors[7],7),rep(row.colors[8],8)))
 
 ```
@@ -937,7 +1280,7 @@ heatmap.2(collapsedMotifHead, dendrogram = 'none',Rowv = FALSE, Colv = FALSE, tr
 
 ```{r Convert Genome Meta to Transcriptome Meta, eval=FALSE, include=FALSE}
 
-ds.ds <- readRDS("objects/ds.s1.s100_pc31_p40.rds")
+ds.ds <- readRDS("objects/Hydra_Seurat_Whole_Transcriptome.rds")
 
 #add cell scores from genome NMF to transcriptome seurat object
 meta.data <- ds.ds@meta.data
@@ -957,6 +1300,12 @@ ds.ds@meta.data <- meta.data
 FeaturePlot(ds.ds, "X19", cols.use = c("grey", "blue"))
 
 ```
+
+Below is code that will allow you to save your R environment, which will allow you restore the analysis later without having to re-execute the code.
+```{r}
+save.image(file = paste0(writePath,"/","enrichment_workspace.RData"))
+```
+
 
 ### Software versions
 
